--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,2 @@
-# 生产环境
-VITE_API_BASE_URL=https://api.bitopro.com
+VITE_API_BASE_URL=http://35.220.204.59:8087
 VITE_WS_URL=wss://stream.bitopro.com/ws
