--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.5",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
     "react-window": "^2.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
@@ -52,7 +54,8 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "npm:rolldown-vite@7.2.2"
+    "vite": "npm:rolldown-vite@7.2.2",
+    "vite-plugin-svgr": "^4.5.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.2"
